--- a/r-references.bib
+++ b/r-references.bib
@@ -306,3 +306,13 @@
   note = {R package version 0.1},
   url = {https://CRAN.R-project.org/package=here},
 }
+@Article{R-lsmeans,
+  title = {Least-Squares Means: The {R} Package {lsmeans}},
+  author = {Russell V. Lenth},
+  journal = {Journal of Statistical Software},
+  year = {2016},
+  volume = {69},
+  number = {1},
+  pages = {1--33},
+  doi = {10.18637/jss.v069.i01},
+}
