--- a/Suppl_Materials_individual_Exp.tex
+++ b/Suppl_Materials_individual_Exp.tex
@@ -1,38 +1,47 @@
-\documentclass[man]{apa6}
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+%
+\documentclass[
+  man]{apa6}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
-\usepackage{fixltx2e} % provides \textsubscript
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-\else % if luatex or xelatex
-  \ifxetex
-    \usepackage{mathspec}
-  \else
-    \usepackage{fontspec}
-  \fi
-  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
+  \usepackage{unicode-math}
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
-% use upquote if available, for straight quotes in verbatim environments
+% Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-% use microtype if available
-\IfFileExists{microtype.sty}{%
-\usepackage{microtype}
-\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\usepackage{hyperref}
-\hypersetup{unicode=true,
-            pdftitle={Supplementary Materials for Perpecptual Salience of Positive Self},
-            pdfauthor={Chuan-Peng Hu, Kaiping Peng, \& Jie Sui},
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
-\usepackage{graphicx}
-% grffile has become a legacy package: https://ctan.org/pkg/grffile
-\IfFileExists{grffile.sty}{%
-\usepackage{grffile}
-}{}
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+\usepackage{xcolor}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\hypersetup{
+  pdftitle={Supplementary Materials for Perpecptual Salience of Positive Self},
+  pdfauthor={Chuan-Peng Hu, Kaiping Peng, \& Jie Sui},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
+\urlstyle{same} % disable monospaced font for URLs
+\usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
 \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
@@ -41,35 +50,14 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
-\setlength{\emergencystretch}{3em}  % prevent overfull lines
+% Set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+\setlength{\emergencystretch}{3em} % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{0}
-% Redefines (sub)paragraphs to behave more like sections
-\ifx\paragraph\undefined\else
-\let\oldparagraph\paragraph
-\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-\let\oldsubparagraph\subparagraph
-\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
-
-%%% Use protect on footnotes to avoid problems with footnotes in titles
-\let\rmarkdownfootnote\footnote%
-\def\footnote{\protect\rmarkdownfootnote}
-
-
-  \title{Supplementary Materials for Perpecptual Salience of Positive Self}
-    \author{Chuan-Peng Hu\textsuperscript{1,2}, Kaiping Peng\textsuperscript{1}, \& Jie Sui\textsuperscript{1,3}}
-    \date{}
-  
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 \shorttitle{Supplementary Materials}
 \affiliation{
 \vspace{0.5cm}
@@ -105,6 +93,10 @@
 
 \linenumbers
 
+\title{Supplementary Materials for Perpecptual Salience of Positive Self}
+\author{Chuan-Peng Hu\textsuperscript{1,2}, Kaiping Peng\textsuperscript{1}, \& Jie Sui\textsuperscript{1,3}}
+\date{}
+
 \authornote{Chuan-Peng Hu, Department of Psychology, Tsinghua University, 100084 Beijing, China; Germany Resilience Center, 55131 Mainz, Germany.
 Kaiping Peng, Department of Psychology, Tsinghua University, 100084 Beijing, China.
 Jie Sui, Department of Psychology, the University of Bath, Bath, UK.
@@ -113,10 +105,14 @@ Authors contriubtion: CPH, JS, \& KP design the study, CPH collected the data, C
 
 Correspondence concerning this article should be addressed to Chuan-Peng Hu, Langenbeckstr. 1, Neuroimaging Center, University Medical Center Mainz, 55131 Mainz, Germany. E-mail: \href{mailto:hcp4715@gmail.com}{\nolinkurl{hcp4715@gmail.com}}}
 
+\abstract{
 
+}
 
 \begin{document}
 \maketitle
+
+The Bayes factor is the ratio of the probability of the current data pattern under alternative hypothesis (H\_1) and the probability of the current data pattern under null hypothesis (H\_0), which index the relative evidence for these two hypotheses from the current data. The BF\_10 represents the evidence for alternative hypothesis (H\_1) vs.~evidence for null hypothesis (H\_0); in contrast, BF\_01 represents that evidence for null hypothesis over the evidence for althernative hypothesis. We used the default prior in JASP for all the Bayes Factor analyses, and used ({\textbf{???}})'s convention for the strength of evidence: the BF\_10 \textgreater{} 3 means there are some evidence for H\_1 as compared with H\_0, BF\_10 great or equal to 10 means strong evidence for H\_1.
 
 \hypertarget{experiment-1a}{%
 \section{Experiment 1a}\label{experiment-1a}}
@@ -569,9 +565,9 @@ There was a main effect of Matchness (\(F(1, 44) = 210.69\), \(\mathit{MSE} = 1,
 We futher broke down the interaction by analyzing the data for self and other pairs separately. There was a significant effect of moral valence for self-stimuli, \(F(1.74, 76.48) = 13.69\), \(\mathit{MSE} = 1,732.08\), \(p < .001\), \(\hat{\eta}^2_G = .079\), BF10 = 11.16. Paired \emph{t} tests showed that good-self association (680 ± 9.79) were faster than bad-self associations (721 ± 8.97), \emph{t}(44) = -4.22, \emph{p} \textless{} .001, Cohen's \emph{d} = -0.629 CI {[}-0.947 -0.306{]}, BF10 = 200, and neutral-self association (713 \(\pm\) 8.19), \emph{t}(44) = -4.67, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.696, 95\% CI {[}-1.019 -0.367{]}, BF10 = 745.3. The neutral-self and bad-self associations did not differ, \emph{t}(44) = -1.04, \emph{p} = .31, Cohen's \emph{d} = -0.155, 95\%CI {[}-0.448 0.14{]}, BF10 = 0.267. RTs in good-self condition were facilitated but without performance being impaired for bad-self associations (relative to the normal neutral self)(see Figure 5).
 For other-association condition, the main effect of moral valence was also significant, \(F(1.87, 82.44) = 7.09\), \(\mathit{MSE} = 1,527.43\), \(p = .002\), \(\hat{\eta}^2_G = .043\), BF10 = 21. The RT for good-other association condition (688 ± 66.9) is faster than the bad-other association condition (718 ± 49.7), t(44) = -3.353, p = 0.0017, Cohen's d = -0.4999, 95\%CI {[}-0.8075 -0.1872{]}, BF10 = 18.84. The RT for good-other condition is slightly faster than neutral-other condition (704 ± 57.1), but the evidence is not strong, t (44) = -2.21, p = 0.0324, Cohen's d = -0.3294, 95\%CI {[}-6278 -0.0275{]}, BF10 = 1.454. While there is is no strong evidence about the differences between bad-other vs.~neutral-other conditions, t(44) = -1.8267, p = 0.0745, Cohen's d = -0.2723, 95\%CI {[}-0.5685 0.0268{]}, BF10 = 0.743.
 
-We also comparied the reaction times for self- and other- association in different valence condition. we found that Good-self condition is faster than good-other condition, \emph{t}(44) = -2.165, \emph{p} = 0.0358; neutral self is slower than neutral-other condition, \emph{t}(44) = 3.064, \emph{p} = 0.0037. Bad-self and bad-other did not show difference, \emph{t}(44) = 0.623, \emph{p} = 0.5363
+We also comparied the reaction times for self- and other- association in different valence condition. we found that Good-self condition is faster than good-other condition, \emph{t}(44) = -2.165, \emph{p} = 0.0358; neutral self is slower than neutral-other condition, \emph{t}(44) = 3.064, \emph{p} = 0.0037. Bad-self and bad-other did not show difference, \emph{t}(44) = 0.623, \emph{p} = 0.5363.
 
-For non-matched trials, there was no significant effect. Idneity (\(F(1, 44) = 1.96\), \(\mathit{MSE} = 319.47\), \(p = .169\), \(\hat{\eta}^2_G = .001\)), interaction (\(F(1.88, 82.57) = 0.31\), \(\mathit{MSE} = 316.96\), \(p = .718\), \(\hat{\eta}^2_G = .000\)). But here are effect of Valence (\(F(1.69, 74.54) = 6.59\), \(\mathit{MSE} = 886.19\), \(p = .004\), \(\hat{\eta}^2_G = .010\))
+For non-matched trials, there was no significant effect. Identity (\(F(1, 44) = 1.96\), \(\mathit{MSE} = 319.47\), \(p = .169\), \(\hat{\eta}^2_G = .001\)), interaction (\(F(1.88, 82.57) = 0.31\), \(\mathit{MSE} = 316.96\), \(p = .718\), \(\hat{\eta}^2_G = .000\)). But here are effect of Valence (\(F(1.69, 74.54) = 6.59\), \(\mathit{MSE} = 886.19\), \(p = .004\), \(\hat{\eta}^2_G = .010\))
 
 \hypertarget{discussion-4}{%
 \subsection{Discussion}\label{discussion-4}}
@@ -791,6 +787,5 @@ For the matched trials, the interaction between identity and valence, \(F(1.62, 
 \hypertarget{refs}{}
 
 \endgroup
-
 
 \end{document}
