--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1613,6 +1613,7 @@ df7a_m.meta.rt <- df7a_m.v.rt_m %>%
                 Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
   dplyr::select(CommonColnames_rt)
 
+# Exp 7b matching task ----
 ## Load and prepare for exp7b
 df7b_m <- read.csv(".\\exp7\\rawdata_behav_exp7b_2018.csv",header = TRUE, sep = ",",
                  stringsAsFactors=FALSE,na.strings=c("","NA"))
@@ -1655,7 +1656,7 @@ df7b.excldSub3_M <- df7b_m %>%
 df7b.excldSub_M   <- c(df7b.excldSub1_M, df7b.excldSub2_M, df7b.excldSub3_M) # 7302, 7303
 
 # select valid data for further analysis
-df7b_m.V <- df7b_m %>%
+df7b_m.v <- df7b_m %>%
   dplyr::rename(Matchness = Match,
                 Valence = Morality) %>%
   dplyr::mutate(ACC = ifelse(ACC == 1, 1, 0),                  # no response as wrong
@@ -1665,7 +1666,7 @@ df7b_m.V <- df7b_m %>%
   
 
 # calculate d prime
-df7b_m.v.dprime_l <- df7b_m.V %>%
+df7b_m.v.dprime_l <- df7b_m.v %>%
   dplyr::mutate(sdt = mosaic::derivedFactor("hit" = (ACC ==1 & Matchness == "Match"), # code as hit
                                     "CR" = (ACC ==1  & Matchness == "Mismatch"),      # correct reject
                                     "miss" = (ACC == 0 & Matchness == "Match"),       # miss
@@ -1685,7 +1686,7 @@ df7b_m.v.dprime_l <- df7b_m.V %>%
                 Identity = factor(Identity, levels = c('Self', 'Other')))
 
 #  prepare the mean RT for each participant
-df7b_m.v.rt_m <- df7b_m.V %>%
+df7b_m.v.rt_m <- df7b_m.v %>%
   dplyr::filter(ACC == 1) %>%
   dplyr::group_by(Site,Subject, Age, Sex, Matchness, Identity, Valence) %>%
   dplyr::summarise(RT_m = mean(RT)*1000,
@@ -1740,7 +1741,6 @@ df7a_m.meta.rt <- df7a_m.meta.rt %>% dplyr::filter(!Subject %in% c(7020)) # excl
 ```{r first meta,echo=FALSE,results='hide'}
 # Combine the data -----
 df.meta_d_1 <- rbind(df1a.meta.d, df1b.meta.d, df1c.meta.d, df2.meta.d, df4b.meta.d , df5.meta.d, df6a.meta.d) 
-
 df.meta_rt_1 <- rbind(df1a.meta.rt, df1b.meta.rt, df1c.meta.rt, df2.meta.rt, df4b.meta.rt,df5.meta.rt, df6a.meta.rt)
 
 # Prepare the data for meta ----
@@ -1815,7 +1815,7 @@ df.ES_1_sum <- df.ES_1 %>%
 
 df.res.meta_1 <- data.frame(matrix(, nrow= 3*2, ncol=0)) %>%
   dplyr::mutate(DVtype = rep(c('RT', 'dprime'), each = 3),
-                Group  = rep(groupList_1, 2),
+                #Group  = rep(groupList_1, 2),
                 Effect = rep(effectList_1, 2),
                 #Group  = rep(groupList, length(unique(df.meta_d$ExpID))*2),
                 N_exp = NA, Cohen_d = NA, se = NA, CI_low = NA, CI_upp = NA, pval = NA)
@@ -2455,6 +2455,72 @@ tmp2 <- df.meta_d_1 %>%
 df.meta_1_wide <- merge(tmp1,tmp2); rm(tmp1,tmp2)
 
 # read the hddm parameters
+### Prepare the data for hddm
+#expNameList <- c("Exp1a", "Exp1b", "Exp1c", "Exp2", "Exp3a","Exp3b", "Exp4a", "Exp4b","Exp5","Exp6a","Exp6b","Exp7a","Exp7b")
+dataList <- list(df1a.v, df1b.v, df1c.v, df2.v, df3a.v, df3b.v, df4a.v, df4b.v, df5.v, df6a.v, df6b_d1.v, df7a_m.v, df7b_m.v)
+hddmNameList <- c('df1a.v', 'df1b.v', 'df1c.v', 'df2.v', 'df3a.v', 'df3b.v', 'df4a.v', 'df4b.v', 'df5.v', 'df6a.v' ,'df6b_d1.v', 'df7a_m.v', 'df7b_m.v')
+for (indx in 1:13) {
+ # for (dfname in hddmNameList){
+  current.df <- dataList[[indx]]
+  if ('Resp' %in% colnames(current.df)){
+    current.df <- current.df %>% dplyr::rename(RESP = Resp)
+  }
+  current.name <- paste(hddmNameList[indx],'.hddm_stim.csv', sep = '')
+  if (indx %in% c(1:4, 10)){                                           # for exp 1a and 1b, 2*3 design
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%          # only participants with Questionnaire data
+      dplyr::filter(!is.na(RESP)) %>%                       # exclude trials without response or with wrong keys
+      dplyr::mutate(RT = RT/1000,
+                    stim = ifelse(Matchness == "Match", 1, 0),          
+                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+      dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
+      dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
+  } else if (indx == 9){    # exp5                                      # for exp 5, only select morality task
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(taskType == 'Morality') %>%
+      #dplyr::filter(Subject %in% subj.common) %>%      # only participants with Questionnaire data
+      dplyr::filter(!is.na(RESP)) %>%                   # exclude trials without response or with wrong keys
+      dplyr::mutate(RT = RT/1000,
+                    stim = ifelse(Matchness == "Match", 1, 0),          
+                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+      dplyr::select(Subject, Matchness, taskType, Valence, stim, response, RT) %>%           # select columns
+      dplyr::rename(subj_idx = Subject, match = Matchness, domain = taskType, val = Valence, rt = RT) # rename columns
+    
+  } 
+    else if (indx %in% c(5:8, 10:12))             # for expa4a, 4b, 6b, 7a, 3b,  three-way design,
+      {
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+      dplyr::mutate(RT = RT/1000,
+                    stim = ifelse(Matchness == "Match", 1, 0),          
+                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
+      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
+  } 
+    else if (indx == 13)
+    {                                                    # for exp7b,  three-way design, the RT already in seconds
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%          # only participants with Questionnaire data
+      dplyr::filter(!is.na(RESP)) %>%                       # exclude trials without response or with wrong keys
+      dplyr::mutate(stim = ifelse(Matchness == "Match", 1, 0),          
+                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
+      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
+  } 
+ write.csv(cur.df.hddm_stim, file = paste(curDir,'/HDDM/', current.name, sep = ''), row.names = F) 
+}
+
+# rm(dataList)
+
+# get the parameters from hddm
+## read all the file name.
+params.list <- list.files('.\\HDDM\\', pattern = '*_hddm_params.csv')
+params.expname <- data.frame(params.list) %>%
+  tidyr::separate(params.list, c('expName','B','C'),sep = '_') %>%
+  dplyr::select(expName) %>%
+  dplyr::pull()
+
 # exp_ls_1 <- c('df1a', 'df1b', 'df1c', 'df2', 'df4b' , 'df5', 'df6a')
 
 df1a.v.hddm_params <- read.csv(".\\HDDM\\df1a_hddm_params.csv",header = TRUE, sep = ",",
